меняю пути к изображениям в css, ретинизация изображения в блоке stay

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
   margin-bottom: 35px;
   background-color: $header-bg-color;
-  background-image: url("../../img/background.png");
+  background-image: url("../img/background.png");
 }
 
 .header__wrapper {
