--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -71,12 +71,12 @@
 
 .form__input-checkbox + label::before {
   @include checkbox;
-  background: url("../../img/checkbox-off.svg") no-repeat;
+  background: url("../img/checkbox-off.svg") no-repeat;
 }
 
 .form__input-checkbox:checked + label::before {
   @include checkbox;
-  background: url("../../img/checkbox-on.svg") no-repeat;
+  background: url("../img/checkbox-on.svg") no-repeat;
 }
 
 @keyframes shake {
