--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -35,7 +35,7 @@
   right: 20px;
   width: 17px;
   height: 17px;
-  background-image: url("../../img/icon-close.svg");
+  background-image: url("../img/icon-close.svg");
   background-color: $blue-color;
   border: none;
 }
