--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -173,12 +173,12 @@
     width: 100%;
     height: 515px;
     left: 0;
-    background-image: url("../../img/motherboard-mobile@1x.png");
+    background-image: url("../img/motherboard-mobile@1x.png");
     background-repeat: no-repeat;
     background-position: left 7% top 0;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../../img/motherboard-mobile@2x.png");
+      background-image: url("../img/motherboard-mobile@2x.png");
     }
   }
 
