--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -10,6 +10,7 @@
 
 .about-company__explanation {
   width: 85%;
+  margin-left: 30px;
 }
 
 .about-company__header {
@@ -30,7 +31,7 @@
 }
 
 .about-company__icon {
-  max-height: 100%;
+  height: 100%;
 }
 
 @media (max-width: $tablet-width) {
@@ -63,7 +64,7 @@
     margin-bottom: 16px;
   }
 
-  .about-company__icon {
+  .about-company__wrapper picture {
     display: none;
   }
 
