Делаю правильное изображание в блоке promo

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -4,8 +4,6 @@
   background-image: url("../img/background-promo-desktop.svg");
   background-repeat: no-repeat;
   background-position: 10% 0;
-  
-  
 }
 
 .promo::before {
@@ -18,7 +16,8 @@
   background-image: url("../img/motherboard-desktop@1x.png");
   background-repeat: no-repeat;
   background-position: left calc(50% + 366px) top 0;
-  
+  background-size: 705px 515px;
+
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/motherboard-desktop@2x.png");
   }
@@ -117,6 +116,7 @@
     background-image: url("../img/motherboard-tablet@1x.png");
     background-repeat: no-repeat;
     background-position: left calc(50% + 260px) top 0;
+    background-size: 465px 340px;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/motherboard-tablet@2x.png");
@@ -174,6 +174,7 @@
     height: 515px;
     left: 0;
     background-image: url("../img/motherboard-mobile@1x.png");
+    background-size: 300px 220px;
     background-repeat: no-repeat;
     background-position: left 7% top 0;
 
