--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,14 +3,14 @@
   color: $white-color;
   background-image: url("../img/background-promo-desktop.svg");
   background-repeat: no-repeat;
-  background-position: 10% 0;
+  background-position: 10% 12px
 }
 
 .promo::before {
   content: "";
   position: absolute;
-  top: -10px;
-  left: 10%;
+  top: 0;
+  left: 8%;
   width: 90%;
   height: 515px;
   background-image: url("../img/motherboard-desktop@1x.png");
@@ -54,8 +54,9 @@
   left: -45px;
   top: 400px;
   transform: rotate(-90deg);
-  margin-top: 40px;
+  margin-top: 78px;
   color: $white-color;
+  font-size: 14px;
   opacity: 0.5;
   cursor: pointer;
   line-height: 16px;
