--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,10 +1,15 @@
 .logo {
-  width: 200px;
+  width: 194px;
 }
 
 .logo__link {
   @include flex-row;
   cursor: pointer;
+}
+
+.logo__icon {
+  width: 52px;
+  height: 52px;
 }
 
 .logo__text {
@@ -21,6 +26,11 @@
 }
 
 @media (max-width: $mobile-width) {
+  .logo__icon {
+    width: 45px;
+    height: 38px;
+  }
+
   .logo__text {
     display: none;
   }
