--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,11 +1,21 @@
-.navigation__toggle {
+.navigation {
   margin-top: 11px;
+}
+
+.navigation__toggle {
   background: transparent;
   border: none;
 }
 
 @media (max-width: $tablet-width) {
-  .navigation__toggle {
+  .navigation {
+    margin-top: -13px;
+  }
+}
+
+
+@media (max-width: $mobile-width) {
+  .navigation {
     margin-top: 0;
   }
 }
