--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -17,12 +17,12 @@
 
 .advantages__item {
   position: relative;
-  max-width: 42%;
+  max-width: 41%;
   min-height: 130px;
-  margin-bottom: 20px;
-  padding-top: 100px;
-  padding-left: 3%;
-  padding-right: 3%;
+  margin-bottom: 25px;
+  padding-top: 90px;
+  padding-left: 4%;
+  padding-right: 4%;
   padding-bottom: 70px;
   background-color: $white-color;
   border: 1px solid $border-color;
@@ -83,7 +83,7 @@
 }
 
 .advantages__title {
-  margin-bottom: 15px;
+  margin-bottom: 18px;
   font-family: $robotocondensedbold;
   font-size: 24px;
   line-height: 34px;
@@ -97,12 +97,7 @@
 
 @media (max-width: $tablet-width) {
   .advantages {
-    @include page-size;
     margin-bottom: 25px;
-  }
-
-  .advantages__wrapper {
-    width: 100%;
   }
 
   .advantages__list {
@@ -113,12 +108,13 @@
     margin-bottom: 29px;
     padding-top: 65px;
     padding-bottom: 20px;
-    max-width: 41%;
+    padding-left: 25px;
+    max-width: 40%;
     min-height: 145px;
   }
 
   .advantages__title {
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 }
 
@@ -127,17 +123,13 @@
     margin-bottom: 27px;
   }
 
-  .advantages__wrapper {
-    width: 99%;
-  }
-
   .advantages__item {
     margin-right: 0;
     max-width: 90%;
     min-height: 138px;
     margin-bottom: 22px;
     padding-top: 70px;
-    padding-right: 5%;
+    padding-right: 6%;
     padding-left: 8%;
     padding-bottom: 22px;
 
