--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -157,16 +157,16 @@
 @media (max-width: $mobile-width) {
   .services {
     background-color: $header-bg-color;
-    padding-top: 42px;
+    padding-top: 44px;
   }
 
   .services__item {
     width: 93%;
     min-height: 240px;
     margin-right: 30px;
-    padding-top: 15px;
+    padding-top: 20px;
     padding-left: 13%;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 
     &--parts::after {
       background-image: url("../img/parts-mobile@1x.png");
@@ -218,6 +218,7 @@
 
   .services__title {
     line-height: 43px;
-    margin-bottom: 40px;
+    margin-bottom: 37px;
+    padding-left: 8px;
   }
 }
