--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  width: 194px;
+  min-width: 194px;
 }
 
 .logo__link {
@@ -26,6 +26,10 @@
 }
 
 @media (max-width: $mobile-width) {
+  .logo {
+    min-width: 52px;
+  }
+
   .logo__icon {
     width: 45px;
     height: 38px;
