--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,6 +1,4 @@
 .advantages {
-  width: 100%;
-  background-position: 92% 245px;
   margin-bottom: 100px;
 }
 
@@ -28,7 +26,6 @@
   border: 1px solid $border-color;
   border-left: 3px solid $blue-color;
   cursor: pointer;
-  z-index: 10;
 
   &:hover {
     color: $white-color;
@@ -100,10 +97,6 @@
     margin-bottom: 38px;
   }
 
-  .advantages__list {
-    width: 100%;
-  }
-
   .advantages__item {
     margin-bottom: 29px;
     padding-top: 65px;
@@ -130,7 +123,7 @@
     margin-bottom: 22px;
     padding-top: 70px;
     padding-right: 6%;
-    padding-left: 8%;
+    padding-left: 28px;
     padding-bottom: 22px;
 
     &:last-child {
