--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -53,7 +53,6 @@
 .promo__icon {
   margin: 0;
   margin-right: 20px;
-  text-align: left;
 }
 
 .promo__icon svg {
@@ -121,7 +120,6 @@
     padding-top: 70px;
     width: 50%;
     line-height: 70px;
-    margin-bottom: 30px;
   }
 
   .promo__description {
@@ -150,14 +148,12 @@
 @media (max-width: $mobile-width) {
   .promo {
     background-image: url("../img/background-promo-mobile.svg");
-    width: 100%;
     background-position: 60% -70px;
   }
 
   .promo::before {
     top: 20px;
     width: 100%;
-    height: 515px;
     left: 0;
     background-image: url("../img/motherboard-mobile@1x.png");
     background-size: 300px 220px;
@@ -173,12 +169,11 @@
   }
 
   .promo__title {
-    margin-top: 177px;
     font-size: 2.5rem;
     line-height: 47px;
     width: 100%;
     margin-left: 0;
-    padding-top: 0;
+    padding-top: 177px;
     margin-bottom: 27px;
   }
 
