--- a/source/sass/blocks/stay.scss
+++ b/source/sass/blocks/stay.scss
@@ -37,7 +37,6 @@
 }
 
 .stay__forms {
-  width: 49%;
   margin-left: 51%;
 }
 
@@ -58,7 +57,6 @@
   .stay__container {
     background-image: none;
     width: 77%;
-    margin: auto;
 
     &::before {
       display: none;
@@ -66,12 +64,11 @@
   }
 
   .stay__forms {
-    width: 100%;
     margin-left: 0;
   }
 
   .stay__wrapper {
-    margin-top: 30px;
+    margin-top: 0;
   }
 
   .stay__header {
@@ -84,7 +81,7 @@
   }
 
   .stay {
-    padding-top: 50px;
+    padding-top: 80px;
     padding-bottom: 103px;
     background-color: $blue-color;
   }
@@ -92,7 +89,7 @@
 
 @media (max-width: $mobile-width) {
   .stay {
-    padding-top: 0;
+    padding-top: 30px;
     padding-bottom: 40px;
   }
 
