--- a/source/sass/blocks/about-site.scss
+++ b/source/sass/blocks/about-site.scss
@@ -57,6 +57,7 @@
 
   .about-site--opened .about-site__toggle {
     background-image: url("../img/icon-minus.svg");
+     background-position: 0 50%;
   }
 
   .about-site__title,
