Убираю аутлайн на значке закрытия меню

--- a/source/sass/blocks/about-office.scss
+++ b/source/sass/blocks/about-office.scss
@@ -46,10 +46,20 @@
   .about-office--closed .about-office__toggle {
     position: absolute;
     background-image: url("../img/icon-plus.svg");
+    
+    &:active,
+    &:focus {
+      outline: none;
+    }
   }
 
   .about-office--opened .about-office__toggle {
     background-image: url("../img/icon-minus.svg");
     background-position: 0 50%;
+
+    &:active,
+    &:focus {
+      outline: none;
+    }
   }
 }
