Убираю outline с полей формы и значков

--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -38,6 +38,7 @@
   background-image: url("../img/icon-close.svg");
   background-color: $blue-color;
   border: none;
+  outline: none;
 }
 
 .popup--show {
