--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -278,6 +278,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   width: 86%;
   color: $black-color;
+  outline: none;
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.5);
@@ -316,6 +317,7 @@
   padding: 15px 5%;
   border: none;
   resize: none;
+  outline: none;
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.5);
