--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -9,7 +9,7 @@
 }
 
 .about-company__explanation {
-  margin-top: -15px;
+  margin-top: -12px;
   width: 85%;
 }
 
@@ -41,6 +41,7 @@
 .about-company__image {
   height: 100%;
   width: 120px;
+  margin-right: 43px;
 }
 
 @media (max-width: $tablet-width) {
