--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,7 @@ $pt-mono-bold-font: "RobotoMono-Bold", "Arial", sans-serif;
 $roboto-mono-bold-font: "RobotoMono-Bold", "Arial", sans-serif;
 $roboto-mono-regular-font: "RobotoMono-Regular", "Arial", sans-serif;
 $robotocondensedbold: "Robotocondensedbold", "Arial", sans-serif;
+$robotocondensedregular: "Robotocondensedregular", "Arial", sans-serif;
 
 $desktop-width: 1024px;
 $tablet-width: 1023px;
