--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  min-width: 194px;
+  min-width: 205px;
 }
 
 .logo__link {
@@ -28,6 +28,10 @@
 @media (max-width: $mobile-width) {
   .logo {
     min-width: 52px;
+  }
+  
+  .logo__text {
+    margin-left: 7px;
   }
 
   .logo__icon {
