--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  margin-bottom: 100px;
+  margin-bottom: 95px;
 }
 
 .advantages__wrapper {
@@ -18,7 +18,7 @@
   max-width: 41%;
   min-height: 130px;
   margin-bottom: 25px;
-  padding-top: 90px;
+  padding-top: 93px;
   padding-left: 4%;
   padding-right: 4%;
   padding-bottom: 70px;
@@ -80,8 +80,8 @@
 }
 
 .advantages__title {
-  margin-bottom: 18px;
-  font-family: $robotocondensedbold;
+  margin-bottom: 16px;
+  font-family: $robotocondensedregular;
   font-size: 24px;
   line-height: 34px;
   color: $blue-color;
@@ -96,39 +96,86 @@
   .advantages {
     margin-bottom: 38px;
   }
+  
+  .advantages__list {
+    width: 100%;
+  }
+
 
   .advantages__item {
     margin-bottom: 29px;
-    padding-top: 65px;
+    padding-top: 64px;
     padding-bottom: 20px;
     padding-left: 25px;
+    padding-right: 28px;
+    
     max-width: 40%;
     min-height: 145px;
   }
 
   .advantages__title {
     margin-bottom: 8px;
+    font-weight: normal;
   }
 }
 
 @media (max-width: $mobile-width) {
   .advantages {
-    margin-bottom: 40px;
+    margin-bottom: 63px;
   }
 
   .advantages__item {
     margin-right: 0;
-    max-width: 90%;
+    max-width: 91%;
     min-height: 138px;
-    margin-bottom: 22px;
-    padding-top: 70px;
-    padding-right: 6%;
-    padding-left: 28px;
-    padding-bottom: 22px;
+    margin-bottom: 20px;
+    padding-top: 68px;
+    padding-right: 17px;
+    padding-left: 26px;
+    padding-bottom: 23px;
 
     &:last-child {
       margin-bottom: 0;
     }
+  }
+
+  .advantages__item--detective {
+    margin-right: 0;
+    padding-top: 61px;
+    padding-right: 25px;
+    padding-bottom: 35px;
+  }
+  
+  .advantages__item--detective .advantages__title {
+    margin-bottom: -12px;
+    line-height: 32px;
+  }
+  
+  .advantages__item--price {
+    letter-spacing: 0.2px;
+  }
+  .advantages__title {
+    letter-spacing: 0.2px;
+  }
+  
+  .advantages__item--contractor {
+    padding-right: 14px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  
+  .advantages__item--price {
+    padding-top: 66px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  
+  .advantages__text {
+    font-size: 1rem;
   }
 
   .advantages__title {
