--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -33,6 +33,7 @@
 .form__area {
   @include text-area;
   height: 120px;
+  width: 100%;
 }
 
 .form__buttons {
@@ -44,8 +45,8 @@
 
 .form__button {
   @include white-button;
-  padding: 15px;
-  width: 46%;
+  padding: 13px;
+  width: 48%;
 }
 
 .form__label {
@@ -53,9 +54,8 @@
   display: flex;
   flex-direction: row;
   font-family: $pt-mono-regular-font;
-  width: 48%;
+  width: 47%;
   opacity: 0.8;
-  letter-spacing: 0.05em;
 
   &:hover {
     color: $grey-color;
@@ -69,6 +69,7 @@
 .form__label--checkbox label {
   position: relative;
   margin-left: 36px;
+  margin-top: 6px;
 }
 
 .form__input-checkbox + label::before {
@@ -114,6 +115,19 @@
 
   .form__item-input {
     @include input;
+  }
+  
+  .form__item--name,
+  .form__item--number {
+    width: 47%;
+  }
+
+  .form__area {
+    padding: 13px 4%;
+  }
+  
+  .form__buttons {
+    margin-top: 3px;
   }
 }
 
