--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -11,7 +11,7 @@
 .services__title {
   @include container;
   @include main-header;
-  margin-bottom: 50px;
+  margin-bottom: 52px;
   color: $white-color;
 }
 
@@ -25,9 +25,9 @@
 .services__item {
   position: relative;
   margin-bottom: 20px;
-  padding-top: 55px;
+  padding-top: 52px;
   padding-left: 4%;
-  padding-right: 10px;
+  padding-right: 7px;
   min-height: 566px;
   max-height: 100%;
   width: 27%;
@@ -75,8 +75,8 @@
 .services__button {
   @include blue-button;
   position: absolute;
-  width: 63px;
-  height: 63px;
+  width: 67px;
+  height: 60px;
   bottom: 0;
   right: 0;
   left: auto;
@@ -96,21 +96,26 @@
   line-height: 30px;
   z-index: 10;
   width: 50%;
-  font-family: $robotocondensedbold;
+  font-family: $robotocondensedregular;
 }
 
 @media (max-width: $tablet-width) {
   .services {
-    padding-top: 45px;
+    padding-top: 48px;
     padding-bottom: 35px;
   }
 
   .services__item {
     width: 100%;
     min-height: 218px;
-    padding-top: 38px;
+    padding-top: 39px;
     padding-left: 6%;
     margin-bottom: 44px;
+
+    &--parts {
+      padding-top: 52px;
+      min-height: 206px;
+    }
 
     &--parts::after {
       background-image: url("../img/parts-tablet@1x.png");
@@ -138,19 +143,20 @@
   }
 
   .services__info {
-    width: 28%;
+    width: 25%;
   }
 
   .services__title {
-    width: 98%;
+    width: 99%;
     margin-bottom: 48px;
+    font-size: 2.05rem;
   }
 }
 
 @media (max-width: $mobile-width) {
   .services {
     background-color: $header-bg-color;
-    padding-top: 44px;
+    padding-top: 50px;
   }
 
   .services__item {
@@ -160,8 +166,13 @@
     padding-left: 13%;
     margin-bottom: 25px;
 
+    &--parts {
+      padding-top: 20px;
+    }
+
     &--parts::after {
       background-image: url("../img/parts-mobile@1x.png");
+      padding-top: 45px;
 
       @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
         background-image: url("../img/parts-mobile@2x.png");
@@ -212,5 +223,6 @@
     line-height: 43px;
     margin-bottom: 37px;
     padding-left: 8px;
+    font-size: 1.75rem;
   }
 }
