--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -28,7 +28,8 @@
 
 @media (max-width: $tablet-width) {
   .social-list {
-    padding-top: 18px;
+    padding-top: 12px;
+    width: 112px;
   }
 }
 
