--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -129,6 +129,7 @@
     max-width: 91%;
     min-height: 138px;
     margin-bottom: 20px;
+    margin-right: -2px;
     padding-top: 68px;
     padding-right: 17px;
     padding-left: 26px;
@@ -145,19 +146,12 @@
     padding-right: 25px;
     padding-bottom: 35px;
   }
-  
+
   .advantages__item--detective .advantages__title {
     margin-bottom: -12px;
     line-height: 32px;
   }
-  
-  .advantages__item--price {
-    letter-spacing: 0.2px;
-  }
-  .advantages__title {
-    letter-spacing: 0.2px;
-  }
-  
+/*
   .advantages__item--contractor {
     padding-right: 14px;
 
@@ -165,7 +159,7 @@
       margin-bottom: 0;
     }
   }
-  
+*/
   .advantages__item--price {
     padding-top: 66px;
 
