--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -129,7 +129,7 @@
     max-width: 83%;
     min-height: 138px;
     margin-bottom: 20px;
-    margin-right: -2px;
+    margin-right: 0;
     padding-top: 68px;
     padding-right: 17px;
     padding-left: 26px;
